--- a/src/index.css
+++ b/src/index.css
@@ -53,7 +53,7 @@
 
 .sub-headers-name,
 .sub-headers {
-  border-bottom: solid 2px black;
+  border-bottom: solid 2px #cdccc9;
 }
 
 .sub-headers > div > div > div {
@@ -78,7 +78,7 @@
   --ag-range-selection-background-color-2: rgba(33, 150, 243, 0.36);
   --ag-range-selection-background-color-3: rgba(33, 150, 243, 0.49);
   --ag-range-selection-background-color-4: rgba(33, 150, 243, 0.59);
-  --ag-background-color: #f5f5f5;
+  --ag-background-color: #f6f6f6;
   --ag-foreground-color: #181d1f;
   --ag-border-color: #babfc7;
   --ag-secondary-border-color: #dde2eb;
