--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,11 @@ nav .active {
   background-color: var(--clr-f1-gray-highlighted);
 }
 
+nav > ul > li > a > svg {
+  width: 20px;
+  height: 20px;
+}
+
 main {
   background-color: var(--clr-main-background);
 }
