--- a/src/index.css
+++ b/src/index.css
@@ -104,6 +104,10 @@ main {
   margin-left: 2rem;
 }
 
+.current-season--container {
+  width: 1000px;
+}
+
 /* .current-season-next-race--countdown-container */
 .race-schedule--main-container {
   width: calc(100vw - var(--w-nav) - 80px);
@@ -125,6 +129,10 @@ main {
   border-right: 2px solid var(--clr-rolex-gray);
 }
 
+/* .circuit-info--main-container {
+  background-color: var(--clr-f1-gray-background);
+} */
+
 /* .circuit-countdown--contianer {
   background-color: var(--clr-rolex-green);
   width: max-content;
@@ -137,7 +145,7 @@ main {
 
 .circuit-countdown--contianer > div > div:nth-child(2n + 2) {
   border-left: 2px solid var(--clr-rolex-gray);
-  border-right: 2px solid var(--clr-rolex-gray);
+  border-right: 2px solid var(--clr-rolex-grays);
 } */
 
 .circuit-times-table {
@@ -145,9 +153,14 @@ main {
 }
 
 .circuit-img--container {
-  width: auto;
-  margin: 1rem;
+  /* width: auto; */
+  margin: 0.5rem;
 }
+
+/* .circuit-flag-img--container {
+  width: 50px;
+  height: auto;
+} */
 
 .circuit-round > p:first-child,
 .circuit-location > p:first-child,
