--- a/src/index.css
+++ b/src/index.css
@@ -217,6 +217,9 @@ main {
   padding-left: 0.5rem;
 }
 
+.cell-left-2 {
+  padding-left: 1rem;
+}
 /* .sub-headers-name,
 .sub-headers {
   border-bottom: solid 2px #cdccc9;
@@ -224,6 +227,10 @@ main {
 
 .sub-headers-name {
   padding-left: 0.5rem;
+}
+
+.sub-headers-name-2 {
+  padding-left: 1rem;
 }
 
 .sub-headers > div > div > div {
