--- a/src/index.css
+++ b/src/index.css
@@ -141,9 +141,9 @@ main.main-mobile {
   color: white;
 }
 
-.home-next-race--countdown-container {
+/* .home-next-race--countdown-container {
   background-color: var(--clr-f1-red);
-}
+} */
 
 .home-next-race--times-container {
   color: black;
