--- a/src/index.css
+++ b/src/index.css
@@ -57,6 +57,10 @@ nav.mobile-nav > div > div {
   background-color: var(--clr-f1-gray-background);
 }
 
+nav.mobile-nav > div > div {
+  background-color: var(--clr-f1-gray-background);
+}
+
 nav .active {
   background-color: var(--clr-f1-gray-highlighted);
 }
